Restructured facade and removed unneded params

--- a/src/main/webapp/WEB-INF/larex.config
+++ b/src/main/webapp/WEB-INF/larex.config
@@ -49,7 +49,8 @@
 # e.g. imagefilter:bin norm
 # Pages folder input: image.bin.png, image.png, image2.bin.png, image3.bin
 # Filtered pages: image.bin.png, image2.bin.png 
-# (Images will point to *.bin.png, but will be named without the .bin. image.bin.png=image.png)
+# (Images will point to *.bin.png, but will be named without the .bin. image.bin.png=image.png
+# 	Images with the same base name will be grouped together, with the same order as described in the filter)
 #imagefilter:<value>
 
 # Enable/Disable the direct open feature <value>=[enable|disable]
