Fixed settings timing issue

--- a/src/main/webapp/WEB-INF/larex.config
+++ b/src/main/webapp/WEB-INF/larex.config
@@ -44,6 +44,8 @@
 #websave:<value>
 
 # Filter to select specific images via their sub extensions. 
+# Larex will only display images that include that sub extension and will group images with the 
+# same base name up to the sub extension together.
 # Comprised of a list of sub extensions, divided by a space. [default: no filter]:
 # <value>=<extensions>
 # e.g. imagefilter:bin norm
