"no sub extension": added to image filters. Fixed wrong image

--- a/src/main/webapp/WEB-INF/larex.config
+++ b/src/main/webapp/WEB-INF/larex.config
@@ -45,8 +45,8 @@
 
 # Filter to select specific images via their sub extensions. 
 # Larex will only display images that include that sub extension and will group images with the 
-# same base name up to the sub extension together.
-# Comprised of a list of sub extensions, divided by a space. [default: no filter]:
+# same base name up to the sub extension together. Comprised of a list of sub extensions,
+# divided by space. Use "." to refer to images without sub extension.  [default: no filter]:
 # <value>=<extensions>
 # e.g. imagefilter:bin norm
 # Pages folder input: image.bin.png, image.png, image2.bin.png, image3.bin
