--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -39,17 +39,17 @@
 	
 	<error-page>
         <error-code>400</error-code>
-        <location>/400</location>
+        <location>/error/400</location>
     </error-page>
 
     <error-page>
         <error-code>404</error-code>
-        <location>/404</location>
+        <location>/error/404</location>
     </error-page>
 
     <error-page>
         <error-code>500</error-code>
-        <location>/500</location>
+        <location>/error/500</location>
     </error-page>
 
 	<filter>
